New ar localization credit

--- a/dawnsettings/Resources/Translations.plist
+++ b/dawnsettings/Resources/Translations.plist
@@ -12,7 +12,7 @@
 			<key>cell</key>
 			<string>PSTitleValueCell</string>
 			<key>label</key>
-			<string>u/sevenpastzeero</string>
+			<string>@iA7myd</string>
 		</dict>
 		<dict>
 			<key>localeID</key>
