--- a/dawnsettings/Resources/Root.plist
+++ b/dawnsettings/Resources/Root.plist
@@ -190,6 +190,40 @@
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
+			<string>KEYBOARD</string>
+		</dict>
+		<dict>
+			<key>cellClass</key>
+			<string>DawnSegmentTableCell</string>
+			<key>PostNotification</key>
+			<string>com.ethanrdoesmc.dawn/settingsChanged</string>
+			<key>cell</key>
+			<string>PSSegmentCell</string>
+			<key>default</key>
+			<integer>0</integer>
+			<key>defaults</key>
+			<string>com.ethanrdoesmc.dawn</string>
+			<key>key</key>
+			<string>keyboard</string>
+			<key>label</key>
+			<string>D/L/D</string>
+			<key>validTitles</key>
+			<array>
+				<string>DEFAULT</string>
+				<string>LIGHT</string>
+				<string>DARK</string>
+			</array>
+			<key>validValues</key>
+			<array>
+				<integer>0</integer>
+				<integer>2</integer>
+				<integer>1</integer>
+			</array>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
 			<string>LS_MEDIA_PLAYER</string>
 		</dict>
 		<dict>
